--- a/apps/mqtt-client/src/index.html
+++ b/apps/mqtt-client/src/index.html
@@ -8,6 +8,6 @@
     <link rel="icon" type="image/x-icon" href="favicon.ico" />
   </head>
   <body>
-    <smart-home-poc-root></smart-home-poc-root>
+    <smart-home-conx-root></smart-home-conx-root>
   </body>
 </html>
